--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     width: 30%;
     margin: 50px auto 0px;
     color: white;
-    background: #5F9EA0;
+    background: #b7c393;
     text-align: center;
     border: 1px solid #B0C4DE;
     border-bottom: none;
@@ -43,10 +43,11 @@
     border: 1px solid gray;
   }
   .btn {
+    cursor: pointer;
     padding: 10px;
     font-size: 15px;
     color: white;
-    background: #5F9EA0;
+    background:#b7c393;
     border: none;
     border-radius: 5px;
   }
@@ -65,3 +66,4 @@
     background: #dff0d8; 
     border: 1px solid #3c763d;
     margin-bottom: 20px;
+  }
